Fixed spacing for outgoing messages

--- a/app/static/css/rooms.css
+++ b/app/static/css/rooms.css
@@ -52,6 +52,7 @@
 .sent_msg {
   float: right;
   max-width: 80%;
+  padding-right: 10px;
 }
 .input_msg_write input {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
